--- a/brand/templates/update.html
+++ b/brand/templates/update.html
@@ -1,3 +1,30 @@
-<h1> Hello Update! </h1>
+<!DOCTYPE html>
+<html>
 
-<p> You are updating {{update.tag}}. Website is {{ update.website }}.</p>
+<head>
+</head>
+
+<body>
+
+    <h1>Brand Update Creation</h1>
+
+
+    <form method="post">{% csrf_token %}
+        {{ form.as_p }}
+        {% for feature in features %}
+        <ol>
+            <li>{{ feature.feature }} </li>
+            <li>Offered: {{ feature.offered }} </li>
+            <li>Details: {{ feature.details }} </li>
+        </ol>
+        {% endfor %}
+
+        <input type="submit" value="Save">
+    </form>
+
+
+
+
+</body>
+
+</html>
