--- a/brand/templates/update.html
+++ b/brand/templates/update.html
@@ -12,11 +12,40 @@
 </head>
 
 <body>
-    <!-- As a link -->
-    <nav class="bg-color-293145">
-        
-    </nav>
-    <div class="wrapper container mb-3">
+    
+      <nav class="navbar navbar-expand-lg custom-navbar navbar-dark container mt-3">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="https://bank.green">
+                <img src="https://bank.green/img/logo.svg" alt="Bank.Green">
+            </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a href="https://bank.green/pledge" class="nav-link">Pledge</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://bank.green/sustainable-eco-banks">Sustainable banks</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://bank.green/blog">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://bank.green/faq">FAQ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://bank.green/contact">Contact us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link take-action" href="https://bank.green/take-action">Take Action</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <div class="wrapper container mb-3 mt-3">
         <div class="content">
             <h1>Brand Update Creation</h1>
 
@@ -84,7 +113,7 @@
                 {{ features.management_form }}
                 <div class="features-box">
                     {% for feature in features %}
-                        <div class="mb-3 border border-1 p-3 rounded-3">
+                        <div class="mb-3 border border-1 p-3 rounded-3 features-item">
                             <div class="mb-3">
                                 <label for="{{feature.feature.auto_id}}" class="form-label">{{ feature.feature.label }}</label>
                                 {{ feature.feature }}
@@ -104,7 +133,7 @@
                     {% endfor %}
                 </div>
                 
-                <input type="submit" value="Save" class="btn btn-success form-control">
+                <input type="submit" value="Save" class="btn save-btn form-control">
             </form>
         </div>
     </div>
