--- a/brand/templates/update.html
+++ b/brand/templates/update.html
@@ -1,146 +1,101 @@
+{% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html>
+{% block content %}
+<div class="content">
+    <h1>Brand Update Creation</h1>
 
-<head>
-    <link rel='stylesheet' href="{% static 'brand/update.css' %}">
-    <link rel='stylesheet' href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-
-    <title>Brand Update</title>
-</head>
-
-<body>
-    
-      <nav class="navbar navbar-expand-lg custom-navbar navbar-dark container mt-3">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="https://bank.green">
-                <img src="https://bank.green/img/logo.svg" alt="Bank.Green">
-            </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a href="https://bank.green/pledge" class="nav-link">Pledge</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://bank.green/sustainable-eco-banks">Sustainable banks</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://bank.green/blog">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://bank.green/faq">FAQ</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://bank.green/contact">Contact us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link take-action" href="https://bank.green/take-action">Take Action</a>
-              </li>
-            </ul>
-          </div>
+    <form method="post">
+        {% csrf_token %}
+        <h2>Bank Details</h2>
+        <div class="details">
+            <div class="mb-3 row">
+                <div class="col">
+                    <label for="{{form.name.auto_id}}" class="form-label">{{ form.name.label }}</label>
+                    <input type="text" class="form-control" id="{{form.name.auto_id}}" name="{{form.name.name}}" aria-describedby="{{form.name.name}}Help" {% if form.name.initial %}value="{{form.name.initial}}"{% endif %}>
+                    <div id="{{form.name.name}}Help" class="form-text">{{form.name.help_text}}</div>
+                </div>
+                <div class="col">
+                    <label for="{{form.aliases.auto_id}}" class="form-label">{{ form.aliases.label }}</label>
+                    <input type="text" class="form-control" id="{{form.name.auto_id}}" name="{{form.aliases.name}}" aria-describedby="{{form.aliases.name}}Help" {% if form.aliases.initial %}value="{{form.aliases.initial}}"{% endif %}>
+                    <div id="{{form.aliases.name}}Help" class="form-text">{{form.aliases.help_text}}</div>
+                  </div>
+            </div>
+            <div class="mb-3 row">
+                <div class="col">
+                    <label for="{{form.website.auto_id}}" class="form-label">{{ form.website.label }}</label>
+                    <input type="text" class="form-control" id="{{form.website.auto_id}}" name="{{form.website.name}}" aria-describedby="{{form.website.name}}Help" {% if form.website.initial %}value="{{form.website.initial}}"{% endif %}>
+                    <div id="{{form.website.name}}Help" class="form-text">{{form.website.help_text}}</div>
+                </div>
+                <div class="col">
+                    <label for="{{form.countries.auto_id}}" class="form-label">{{ form.countries.label }}</label>
+                    {{form.countries}}
+                    <div id="{{form.countries.name}}Help" class="form-text">{{form.countries.help_text}}</div>
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <div class="col">
+                    <label for="{{form.regions.auto_id}}" class="form-label">{{ form.regions.label }}</label>
+                    {{form.regions}}
+                    <div id="{{form.regions.name}}Help" class="form-text">{{form.regions.help_text}}</div>
+                </div>
+                <div class="col">
+                    <label for="{{form.subregions.auto_id}}" class="form-label">{{ form.subregions.label }}</label>
+                    {{form.subregions}}
+                    <div id="{{form.subregions.name}}Help" class="form-text">{{form.subregions.help_text}}</div>
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <div class="col">
+                    <label for="{{form.additional_info.auto_id}}" class="form-label">{{ form.additional_info.label }}</label>
+                    {{form.additional_info}}
+                    <div id="{{form.additional_info.name}}Help" class="form-text">{{form.additional_info.help_text}}</div>
+                </div>
+                <div class="col">
+                    <label for="{{form.email.auto_id}}" class="form-label">{{ form.email.label }}</label>
+                    <input type="email" class="form-control" id="{{form.email.auto_id}}" name="{{form.email.name}}" aria-describedby="{{form.email.name}}Help" {% if form.email.initial %}value="{{form.email.initial}}"{% endif %}>
+                    <div id="{{form.email.name}}Help" class="form-text">{{form.email.help_text}}</div>
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <div class="col">
+                    <label for="{{form.consent.auto_id}}" class="form-label">{{ form.consent.label }}</label>
+                    {{form.consent}}
+                    <div id="{{form.consent.name}}Help" class="form-text">{{form.consent.help_text}}</div>
+                </div>
+            </div>
         </div>
-      </nav>
-    <div class="wrapper container mb-3 mt-3">
-        <div class="content">
-            <h1>Brand Update Creation</h1>
-
-            <form method="post">
-                {% csrf_token %}
-                <h2>Bank Details</h2>
-                <div class="details">
-                    <div class="mb-3 row">
-                        <div class="col">
-                            <label for="{{form.name.auto_id}}" class="form-label">{{ form.name.label }}</label>
-                            <input type="text" class="form-control" id="{{form.name.auto_id}}" name="{{form.name.name}}" aria-describedby="{{form.name.name}}Help" {% if form.name.initial %}value="{{form.name.initial}}"{% endif %}>
-                            <div id="{{form.name.name}}Help" class="form-text">{{form.name.help_text}}</div>
-                        </div>
-                        <div class="col">
-                            <label for="{{form.aliases.auto_id}}" class="form-label">{{ form.aliases.label }}</label>
-                            <input type="text" class="form-control" id="{{form.name.auto_id}}" name="{{form.aliases.name}}" aria-describedby="{{form.aliases.name}}Help" {% if form.aliases.initial %}value="{{form.aliases.initial}}"{% endif %}>
-                            <div id="{{form.aliases.name}}Help" class="form-text">{{form.aliases.help_text}}</div>
-                          </div>
+        <h2>Features</h2>
+        {{ features.management_form }}
+        <div class="features-box">
+            {% for feature in features %}
+                <div class="mb-3 border border-1 p-3 rounded-3 features-item">
+                    <div class="mb-3">
+                        <label for="{{feature.feature.auto_id}}" class="form-label">{{ feature.feature.label }}</label>
+                        {{ feature.feature }}
+                        <div id="{{feature.feature.name}}Help" class="form-text">{{feature.feature.help_text}}</div>
                     </div>
-                    <div class="mb-3 row">
-                        <div class="col">
-                            <label for="{{form.website.auto_id}}" class="form-label">{{ form.website.label }}</label>
-                            <input type="text" class="form-control" id="{{form.website.auto_id}}" name="{{form.website.name}}" aria-describedby="{{form.website.name}}Help" {% if form.website.initial %}value="{{form.website.initial}}"{% endif %}>
-                            <div id="{{form.website.name}}Help" class="form-text">{{form.website.help_text}}</div>
-                        </div>
-                        <div class="col">
-                            <label for="{{form.countries.auto_id}}" class="form-label">{{ form.countries.label }}</label>
-                            {{form.countries}}
-                            <div id="{{form.countries.name}}Help" class="form-text">{{form.countries.help_text}}</div>
-                        </div>
+                    <div class="mb-3">
+                        <label for="{{feature.offered.auto_id}}" class="form-label">{{ feature.offered.label }}</label>
+                        {{ feature.offered }}
+                        <div id="{{feature.offered.name}}Help" class="form-text">{{feature.offered.help_text}}</div>
                     </div>
-                    <div class="mb-3 row">
-                        <div class="col">
-                            <label for="{{form.regions.auto_id}}" class="form-label">{{ form.regions.label }}</label>
-                            {{form.regions}}
-                            <div id="{{form.regions.name}}Help" class="form-text">{{form.regions.help_text}}</div>
-                        </div>
-                        <div class="col">
-                            <label for="{{form.subregions.auto_id}}" class="form-label">{{ form.subregions.label }}</label>
-                            {{form.subregions}}
-                            <div id="{{form.subregions.name}}Help" class="form-text">{{form.subregions.help_text}}</div>
-                        </div>
-                    </div>
-                    <div class="mb-3 row">
-                        <div class="col">
-                            <label for="{{form.additional_info.auto_id}}" class="form-label">{{ form.additional_info.label }}</label>
-                            {{form.additional_info}}
-                            <div id="{{form.additional_info.name}}Help" class="form-text">{{form.additional_info.help_text}}</div>
-                        </div>
-                        <div class="col">
-                            <label for="{{form.email.auto_id}}" class="form-label">{{ form.email.label }}</label>
-                            <input type="email" class="form-control" id="{{form.email.auto_id}}" name="{{form.email.name}}" aria-describedby="{{form.email.name}}Help" {% if form.email.initial %}value="{{form.email.initial}}"{% endif %}>
-                            <div id="{{form.email.name}}Help" class="form-text">{{form.email.help_text}}</div>
-                        </div>
-                    </div>
-                    <div class="mb-3 row">
-                        <div class="col">
-                            <label for="{{form.consent.auto_id}}" class="form-label">{{ form.consent.label }}</label>
-                            {{form.consent}}
-                            <div id="{{form.consent.name}}Help" class="form-text">{{form.consent.help_text}}</div>
-                        </div>
+                    <div class="mb-3">
+                        <label for="{{feature.details.auto_id}}" class="form-label">{{ feature.details.label }}</label>
+                        {{ feature.details }}
+                        <div id="{{feature.details.name}}Help" class="form-text">{{feature.details.help_text}}</div>
                     </div>
                 </div>
-                <h2>Features</h2>
-                {{ features.management_form }}
-                <div class="features-box">
-                    {% for feature in features %}
-                        <div class="mb-3 border border-1 p-3 rounded-3 features-item">
-                            <div class="mb-3">
-                                <label for="{{feature.feature.auto_id}}" class="form-label">{{ feature.feature.label }}</label>
-                                {{ feature.feature }}
-                                <div id="{{feature.feature.name}}Help" class="form-text">{{feature.feature.help_text}}</div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="{{feature.offered.auto_id}}" class="form-label">{{ feature.offered.label }}</label>
-                                {{ feature.offered }}
-                                <div id="{{feature.offered.name}}Help" class="form-text">{{feature.offered.help_text}}</div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="{{feature.details.auto_id}}" class="form-label">{{ feature.details.label }}</label>
-                                {{ feature.details }}
-                                <div id="{{feature.details.name}}Help" class="form-text">{{feature.details.help_text}}</div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-                
-                <input type="submit" value="Save" class="btn save-btn form-control">
-            </form>
+            {% endfor %}
         </div>
-    </div>
+        
+        <input type="submit" value="Save" class="btn save-btn form-control">
+    </form>
+</div>
+{% endblock content %}
 
-    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}" ></script>
-
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+{% block javascripts %}
+<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     {{form.media}}
 
@@ -149,6 +104,4 @@
             $('.form-select').select2();
         });
     </script>
-</body>
-
-</html>
+{% endblock javascripts %}
