feat: add titles to admin change view, list view

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 {% load i18n static %}
 
-{% block title %} {% trans "Data.Bank.Green" %}{% endblock %}
+{% block title %}{{page_title}}data.bank.green {% endblock %}
 
 {% block extrastyle %}
 {{ block.super }}
