--- a/brand/templates/update.html
+++ b/brand/templates/update.html
@@ -3,42 +3,50 @@
 
 {% block content %}
 <div class="content">
-    <h1>Update Details For {{form.name.value}}</h2>
+    <h1>Help Us Keep Our {{form.name.value}} Data Up to Date</h2>
+        <p>
+            Thank you for contributing to our mission of promoting more sustainable banking practices! If you have information about a new financial institution that you think we should know, or about one we already display, this is the place to tell us! Your input will help inform others about the availability of green banking options, and ultimately lead to a more environmentally-conscious banking industry.
+        </p>
+        <p>
+            Don’t worry if you don’t have all the information below - just do your best, and we’ll take care of the rest!
+        </p>
+        <p>Let's Begin...</p>
+        <br />
         <div class="details">
             <div class="mb-3 row">
                 <div class="col">
-                    <label for="{{form.name.auto_id}}" class="form-label">{{ form.name.label }}</label>
+                    <label for="{{form.name.auto_id}}" class="form-label">Name of Financial Institution</label>
                     <input type="text" class="form-control" id="{{form.name.auto_id}}" name="{{form.name.name}}" aria-describedby="{{form.name.name}}Help" {% if form.name.initial %}value="{{form.name.initial}}"{% endif %}>
                     <div id="{{form.name.name}}Help" class="form-text">{{form.name.help_text}}</div>
                 </div>
                 <div class="col">
                     <label for="{{form.aliases.auto_id}}" class="form-label">{{ form.aliases.label }}</label>
                     <input type="text" class="form-control" id="{{form.name.auto_id}}" name="{{form.aliases.name}}" aria-describedby="{{form.aliases.name}}Help" {% if form.aliases.initial %}value="{{form.aliases.initial}}"{% endif %}>
-                    <div id="{{form.aliases.name}}Help" class="form-text">{{form.aliases.help_text}}</div>
+                    <div id="{{form.aliases.name}}Help" class="form-text">Other names one might use to search for this financial institution, separated by commas</div>
                 </div>
             </div>
             <div class="mb-3 row">
                 <div class="col">
-                    <label for="{{form.website.auto_id}}" class="form-label">{{ form.website.label }}</label>
+                    <label for="{{form.website.auto_id}}" class="form-label">Website</label>
                     <input type="text" class="form-control" id="{{form.website.auto_id}}" name="{{form.website.name}}" aria-describedby="{{form.website.name}}Help" {% if form.website.initial %}value="{{form.website.initial}}"{% endif %}>
                     <div id="{{form.website.name}}Help" class="form-text">{{form.website.help_text}}</div>
                 </div>
                 <div class="col">
-                    <label for="{{form.countries.auto_id}}" class="form-label">{{ form.countries.label }}</label>
+                    <label for="{{form.countries.auto_id}}" class="form-label">Countries</label>
                     {{form.countries}}
-                    <div id="{{form.countries.name}}Help" class="form-text">{{form.countries.help_text}}</div>
+                    <div id="{{form.countries.name}}Help" class="form-text">Where this financial institution offers retail services</div>
                 </div>
             </div>
             <div class="mb-3 row">
                 <div class="col">
                     <label for="{{form.regions.auto_id}}" class="form-label">{{ form.regions.label }}</label>
                     {{form.regions}}
-                    <div id="{{form.regions.name}}Help" class="form-text">{{form.regions.help_text}}</div>
+                    <div id="{{form.regions.name}}Help" class="form-text">Where this financial institution has physical branch locations</div>
                 </div>
                 <div class="col">
                     <label for="{{form.subregions.auto_id}}" class="form-label">{{ form.subregions.label }}</label>
                     {{form.subregions}}
-                    <div id="{{form.subregions.name}}Help" class="form-text">{{form.subregions.help_text}}</div>
+                    <div id="{{form.subregions.name}}Help" class="form-text">Where this financial institution has physical locations or ATMs</div>
                 </div>
             </div>
             <div class="mb-3 row">
@@ -85,7 +93,7 @@
             {% endfor %}
         </div>
         
-        <input type="submit" value="Save" class="btn save-btn form-control">
+        <input type="submit" value="Submit" class="btn save-btn form-control">
     </form>
 </div>
 {% endblock content %}
