--- a/brand/templates/update.html
+++ b/brand/templates/update.html
@@ -69,25 +69,22 @@
                 </div>
             </div>
         </div>
-        <h2>Features</h2>
+        <h2>Service Features</h2>
+        <p>
+            If you wish to help further, or if you are from a financial institution wishing to update your own record, you can enter as many service features as you wish below.
+        </p>
         {{ features.management_form }}
         <div class="features-box">
             {% for feature in features %}
                 <div class="mb-3 border border-1 p-3 rounded-3 features-item">
                     <div class="mb-3">
-                        <label for="{{feature.feature.auto_id}}" class="form-label">{{ feature.feature.label }}</label>
+                        <label for="{{feature.feature.auto_id}}" class="form-label">Service Feature</label>
                         {{ feature.feature }}
                         <div id="{{feature.feature.name}}Help" class="form-text">{{feature.feature.help_text}}</div>
                     </div>
                     <div class="mb-3">
-                        <label for="{{feature.offered.auto_id}}" class="form-label">{{ feature.offered.label }}</label>
-                        {{ feature.offered }}
-                        <div id="{{feature.offered.name}}Help" class="form-text">{{feature.offered.help_text}}</div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="{{feature.details.auto_id}}" class="form-label">{{ feature.details.label }}</label>
+                        <label for="{{feature.details.auto_id}}" class="form-label">Details (if any)</label>
                         {{ feature.details }}
-                        <div id="{{feature.details.name}}Help" class="form-text">{{feature.details.help_text}}</div>
                     </div>
                 </div>
             {% endfor %}
