fix: allow brand updates to submit again

--- a/brand/templates/update.html
+++ b/brand/templates/update.html
@@ -4,14 +4,16 @@
 {% block content %}
 <div class="content">
     <h1>Help Us Keep Our {{form.name.value}} Data Up to Date</h2>
-        <p>
-            Thank you for contributing to our mission of promoting more sustainable banking practices! If you have information about a new financial institution that you think we should know, or about one we already display, this is the place to tell us! Your input will help inform others about the availability of green banking options, and ultimately lead to a more environmentally-conscious banking industry.
-        </p>
-        <p>
-            Don’t worry if you don’t have all the information below - just do your best, and we’ll take care of the rest!
-        </p>
-        <p>Let's Begin...</p>
-        <br />
+    <p>
+        Thank you for contributing to our mission of promoting more sustainable banking practices! If you have information about a new financial institution that you think we should know, or about one we already display, this is the place to tell us! Your input will help inform others about the availability of green banking options, and ultimately lead to a more environmentally-conscious banking industry.
+    </p>
+    <p>
+        Don’t worry if you don’t have all the information below - just do your best, and we’ll take care of the rest!
+    </p>
+    <p>Let's Begin...</p>
+    <br />
+    <form method="post">
+        {% csrf_token %}
         <div class="details">
             <div class="mb-3 row">
                 <div class="col">
