--- a/brand/templates/button.html
+++ b/brand/templates/button.html
@@ -3,7 +3,7 @@
 <h1>Possible Duplicates:</h1>
     <ul>
         {% for bank_to_match, possible_matches in suggested_duplicates.items %}
-            {% if value %}
+            {% if possible_matches %}
                 <li><strong>{{ bank_to_match }}</strong></li>
                 {% for possible_match in possible_matches %}
                     <a href={{possible_match.1}}> {{possible_match.0}}</a><br>
