--- a/brand/templates/button.html
+++ b/brand/templates/button.html
@@ -1,10 +1,11 @@
+
 {% extends "admin/base_site.html" %}
 {% block content %}
 <h1>Possible Duplicates:</h1>
     <ul>
         {% for bank_to_match, possible_matches in suggested_duplicates.items %}
             {% if possible_matches %}
-                <li><strong>{{ bank_to_match }}</strong></li>
+                <li><strong><a href={{bank_to_match.1}}> {{bank_to_match.0}}</a><br></strong></li>
                 {% for possible_match in possible_matches %}
                     <a href={{possible_match.1}}> {{possible_match.0}}</a><br>
                 {% endfor %}
