--- a/brand/templates/change_list_template.html
+++ b/brand/templates/change_list_template.html
@@ -5,5 +5,6 @@
     <form method="get">  
         <input type="submit" formaction="{% url 'check_duplicates' %}" value="Check Duplicates" class="button">
         <input type="submit" formaction="{% url 'export_csv' %}"value="Export CSV" class="button">
+        <input type="submit" formaction="{% url 'missing_tags' %}"value="Missing tags" class="button">
     </form>
 {% endblock %}
