Implemented PE698 Brand CSV Export (#143)
* Implemented PE698 Brand CSV Export

* corrected spelling mistake

* Incorporated review comments

--- a/brand/templates/change_list_template.html
+++ b/brand/templates/change_list_template.html
@@ -2,7 +2,8 @@
 
 {% block object-tools%}
     {{block.super}}
-    <form method="get" action="{% url 'check_duplicates' %}">
-        <input type="submit" value="Check Duplicates" class="button">
+    <form method="get">  
+        <input type="submit" formaction="{% url 'check_duplicates' %}" value="Check Duplicates" class="button">
+        <input type="submit" formaction="{% url 'export_csv' %}"value="Export CSV" class="button">
     </form>
 {% endblock %}
