Nikita/pe 603 consistency checking for brand tags (#146)
* Implemented PE698 Brand CSV Export

* corrected spelling mistake

* I am still working on it.

* Implemented PE-603

* code clean up

* modified urls.py

* added hyperinks for the brands for which bankpages are missing

* incorporated review comments

* modified links with beand id

* remove unused print statement

---------

Co-authored-by: Albert Carter <albert.r.carter@gmail.com>

--- a/brand/templates/change_list_template.html
+++ b/brand/templates/change_list_template.html
@@ -5,5 +5,6 @@
     <form method="get">  
         <input type="submit" formaction="{% url 'check_duplicates' %}" value="Check Duplicates" class="button">
         <input type="submit" formaction="{% url 'export_csv' %}"value="Export CSV" class="button">
+        <input type="submit" formaction="{% url 'check_prismic_mismatches' %}"value="Check Prismic Mismatches" class="button">
     </form>
 {% endblock %}
