--- a/brand/templates/registration/custom_password_reset_email.html
+++ b/brand/templates/registration/custom_password_reset_email.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,7 @@
     <title>Password Reset</title>
 </head>
 <body>
-    <p>Hello,</p>
+    <p>Hello {{ user.first_name }},</p>
 
     <p>You are receiving this email because a password reset request was made for your account.</p>
 
@@ -22,4 +21,3 @@
     <p>Bank.Green Team</p>
 </body>
 </html>
-
